MDEV-34206 compile failure: fmt use incompatible with libfmt-10.2.[2]+

Upstream libfmt commit https://github.com/fmtlib/fmt/commit/d70729215fba1d54862e407b626abf86ddf409bf
now requires the format function to be const.

Adjust the function prototype so it is const and can compile.